# bootcamp-dio-ai-102

./: .env.example  README.md  pyproject.toml
desafios_de_projeto/: PoC_desafio2.ipynb
desafios_de_projeto/desafio_1/: Dockerfile  README.md  docker-compose.yml  requirements.txt
desafios_de_projeto/desafio_1/data/: Steve_Jobs_Stanfod.docx  traducao.md  tradução.docx
desafios_de_projeto/desafio_1/notebook/: Poc_desafio1.ipynb  README.md  READMEv1.md
desafios_de_projeto/desafio_1/src/: app.py  tradutor_arquivo_word.py  tradutor_artigos.py
desafios_de_projeto/desafio_2/: PoC_desafio2.ipynb  README.md  azure_services_guide.md  requirements.txt  task2.md  task3.md  task5.md
desafios_de_projeto/desafio_2/data/: cards.db  credit_cards.db
desafios_de_projeto/desafio_2/notebook/: PoC_desafio2.ipynb  task2.md  task4.md  teste.ipynb
desafios_de_projeto/desafio_2/src/: app.py  appv1.py
desafios_de_projeto/desafio_2/src/services/: blob_service.py  credit_card_service.py  data_base.py
desafios_de_projeto/desafio_2/src/utils/: Config.py  __init__.py
